--- a/style.css
+++ b/style.css
@@ -33,7 +33,13 @@ body{
     font-weight: bolder;
     color: red;
 }
+.hr{
+    background-color: orange;
+    padding: 7px;
+    margin: 10px;
+}
 .btn1{
+    
     border: 4px solid rgb(19, 224, 36) ;
     border-radius: 30px;
     padding: 10px;
@@ -50,6 +56,17 @@ body{
     font-weight: bolder;
     margin: 10px;
     color: rgb(10, 231, 28);
+}
+.btn3:hover{
+    border: 6px solid rgb(19, 197, 224) ;
+    border-radius: 30px;
+    background-color: black;
+    padding: 10px;
+    font-size: 20px;
+    transition: 1000ms;
+    font-weight: bolder;
+    margin: 10px;
+    color: rgb(10, 194, 231);
 }
 .main1{
 display: flex;
