--- a/style.css
+++ b/style.css
@@ -74,3 +74,11 @@ text-align: center;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 color: rgb(10, 10, 10);
 font-size: 20px;}
+a{
+    text-decoration: none;
+    color: red;
+}
+.or{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
